--- a/package.json
+++ b/package.json
@@ -7,6 +7,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "validate": "sam validate",
+    "build": "sam build",
+    "deploy": "sam deploy",
+    "deploy:guided": "sam deploy --guided",
+    "start": "sam local start-api --env-vars env.json",
+    "start:debug": "sam local start-api --env-vars env.json --debug",
+    "clean": "rm -rf .aws-sam",
+    "lint": "eslint src/",
+    "all": "npm run validate && npm run build && npm run deploy",
+    "invoke:local": "sam local invoke MediaManagerFunction --event events/event.json",
+    "logs": "sam logs -n MediaManagerFunction --tail"
   }
 }
