--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,7 +3,7 @@
 version = 0.1
 
 [default.global.parameters]
-stack_name = "sam-app"
+stack_name = "lambda-media-manager"
 
 [default.build.parameters]
 cached = true
@@ -15,10 +15,14 @@ lint = true
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
-resolve_s3 = true
+resolve_s3 = false
+stack_name = "media-manager-stack"
+s3_bucket = "lambda-media-manager-bucket"
+region = "us-east-1"
+image_repositories = []
 
 [default.package.parameters]
-resolve_s3 = true
+resolve_s3 = false
 
 [default.sync.parameters]
 watch = true
