--- a/template.yaml
+++ b/template.yaml
@@ -11,7 +11,7 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: src/handlers/
-      Handler: app.handler
+      Handler: index.handler
       Runtime: nodejs22.x
       Architectures:
         - x86_64
@@ -21,17 +21,26 @@ Resources:
           Properties:
             Path: /presigned
             Method: get
+      Policies:
+        - Statement:
+            - Effect: Allow
+              Action:
+                - s3:ListBucket
+                - s3:GetObject
+              Resource:
+                - arn:aws:s3:::philips-glacier
+                - arn:aws:s3:::philips-glacier/*
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   MediaManagerApi:
-    Description: "API Gateway endpoint URL for Prod stage for Media Manager function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
+    Description: 'API Gateway endpoint URL for Prod stage for Media Manager function'
+    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/presigned/'
   MediaManagerFunction:
-    Description: "Media Manager Lambda Function ARN"
+    Description: 'Media Manager Lambda Function ARN'
     Value: !GetAtt MediaManagerFunction.Arn
   MediaManagerFunctionIamRole:
-    Description: "Implicit IAM Role created for Media Manager function"
+    Description: 'Implicit IAM Role created for Media Manager function'
     Value: !GetAtt MediaManagerFunctionRole.Arn
