--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "lambda-media-manager",
-  "version": "1.0.0",
-  "description": "Media Manager Lamba deployed via AWS SAM",
-  "license": "ISC",
-  "author": "Philip Lane",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "validate": "sam validate",
-    "build": "sam build",
-    "deploy": "sam deploy",
-    "deploy:guided": "sam deploy --guided",
-    "start": "sam local start-api --env-vars env.json",
-    "start:debug": "sam local start-api --env-vars env.json --debug",
-    "clean": "rm -rf .aws-sam",
-    "lint": "eslint src/",
-    "all": "npm run validate && npm run build && npm run deploy",
-    "invoke:local": "sam local invoke MediaManagerFunction --event events/event.json",
-    "logs": "sam logs -n MediaManagerFunction --tail"
-  }
+    "name": "lambda-media-manager",
+    "version": "1.0.0",
+    "description": "Media Manager Lamba deployed via AWS SAM",
+    "license": "ISC",
+    "author": "Philip Lane",
+    "type": "module",
+    "main": "src/handlers/index.js",
+    "scripts": {
+        "validate": "sam validate",
+        "build": "sam build",
+        "deploy": "sam deploy",
+        "deploy:guided": "sam deploy --guided",
+        "start": "sam local start-api --env-vars env.json",
+        "start:debug": "sam local start-api --env-vars env.json --debug",
+        "clean": "rm -rf .aws-sam",
+        "lint": "eslint . --ext .js",
+        "lint:fix": "eslint . --ext .js --fix",
+        "all": "npm run validate && npm run build && npm run deploy",
+        "invoke:local": "sam local invoke MediaManagerFunction --event events/event.json",
+        "logs": "sam logs -n MediaManagerFunction --tail"
+    },
+    "devDependencies": {
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-import": "^2.31.0"
+    }
 }
