--- a/src/handlers/package.json
+++ b/src/handlers/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "s3-fetch-api",
+  "name": "presigned",
   "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
-  "main": "app.js",
+  "description": "Main handler for Media Manager Stack",
+  "main": "index.js",
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "Philip Lane",
-  "license": "MIT",
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.731.1",
