--- a/template.yaml
+++ b/template.yaml
@@ -7,6 +7,16 @@ Globals:
     Timeout: 3
 
 Resources:
+  SharedMediaBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: cosmic-media-vault
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+
   MediaManagerFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
@@ -15,6 +25,9 @@ Resources:
       Runtime: nodejs22.x
       Architectures:
         - x86_64
+      Environment:
+        Variables:
+          TARGET_BUCKET_NAME: !Ref SharedMediaBucket
       Events:
         MediaManager:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
@@ -22,19 +35,19 @@ Resources:
             Path: /presigned
             Method: get
       Policies:
-        - Statement:
-            - Effect: Allow
-              Action:
-                - s3:ListBucket
-                - s3:GetObject
-              Resource:
-                - arn:aws:s3:::philips-glacier
-                - arn:aws:s3:::philips-glacier/*
+        - S3CrudPolicy:
+            BucketName: !Ref SharedMediaBucket
+      # Policies:
+      #   - Statement:
+      #       - Effect: Allow
+      #         Action:
+      #           - s3:ListBucket
+      #           - s3:GetObject
+      #         Resource:
+      #           - arn:aws:s3:::galactic-media-cache
+      #           - arn:aws:s3:::galactic-media-cache/*
 
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   MediaManagerApi:
     Description: 'API Gateway endpoint URL for Prod stage for Media Manager function'
     Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/presigned/'
@@ -44,3 +57,6 @@ Outputs:
   MediaManagerFunctionIamRole:
     Description: 'Implicit IAM Role created for Media Manager function'
     Value: !GetAtt MediaManagerFunctionRole.Arn
+  SharedMediaBucketName:
+    Description: 'Name of the created S3 bucket'
+    Value: !Ref SharedMediaBucket
