--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-import": "^2.31.0"
+    },
+    "engines": {
+        "node": ">=22.0.0"
     }
 }
